--- a/firebase_training_app/pubspec.yaml
+++ b/firebase_training_app/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_core: ^1.13.1
   firebase_auth: ^3.3.11
   firebase_database: ^9.0.8
+  cloud_firestore: ^3.1.10
 
 dev_dependencies:
   flutter_test:
