--- a/firebase_training_app/pubspec.yaml
+++ b/firebase_training_app/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   firebase_auth: ^3.3.11
   firebase_database: ^9.0.8
   cloud_firestore: ^3.1.10
+  firebase_storage: ^10.2.9
 
 dev_dependencies:
   flutter_test:
