--- a/firebase_training_app/pubspec.yaml
+++ b/firebase_training_app/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   firebase_database: ^9.0.8
   cloud_firestore: ^3.1.10
   firebase_storage: ^10.2.9
+  image_picker: ^0.8.4+11
+  uuid: any
 
 dev_dependencies:
   flutter_test:
